changes made between 53rd and 66th lesson

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,5 +4,8 @@ spring:
     path: '/console'
   datasource:
     url: 'jdbc:h2:file:./todo-db'
-#  jpa.hibernate:
-#    ddl-auto: create-drop
+    hikari:
+      username: ''
+  jpa:
+    hibernate:
+      ddl-auto: validate
